<resources>
    <string name="app_name">TODO</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_action_search">Search</string>
    <string name="category">Enter Category Name</string>
    <string name="task_name">Enter Task Title</string>

    <string name="set_alarm">Set Reminder</string>
    <string name="task_due_date">Due Date</string>
    <string name="task_content">Enter Task Content</string>
    <string name="title_activity_add_new_task">Add New Task</string>
    <string name="no_task">No Task Found.\nPlease create a task</string>
</resources>
