<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hmkcode.app.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/holo_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/spnCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/categoryTextContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/etCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/category"
                        android:textColorHint="@color/color_divider"
                        android:textColor="@color/color_black"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/holo_rectangle"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="10dp" >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/containerTaskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    >
                    <EditText
                        android:id="@+id/etTaskName"
                        android:inputType="textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_black"
                        android:textColorHint="@color/color_divider"
                        android:background="@android:color/transparent"
                        android:hint="@string/task_name"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/holo_rectangle"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/txtDueDate"
                    android:clickable="true"
                    android:textColor="@color/color_black"
                    android:text="@string/task_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/holo_rectangle"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="10dp" >
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/set_alarm"
                    android:textOff="OFF"
                    android:textColor="@color/color_black"
                    app:theme="@style/ColorSwitchStyle"
                    app:showText="false"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/holo_rectangle"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="10dp" >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/containerTaskContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    >
                    <EditText
                        android:id="@+id/etTaskContent"
                        android:inputType="textMultiLine"
                        android:minLines="5"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_black"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/color_black"
                        android:hint="@string/task_content"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_done"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:fabSize="normal" />
</RelativeLayout>